--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <app-header></app-header>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<section class="ae-container-fluid rk-main">
+    <!--  <app-portafolio></app-portafolio> -->
+   <!-- <app-about></app-about> -->
+   <!-- <app-item></app-item> -->
+<router-outlet></router-outlet>
+  
+</section>
 
-<app-portafolio></app-portafolio>
 
 <app-footer></app-footer> 
