--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -2,7 +2,7 @@
   <section class="ae-container-fluid ae-container-fluid--inner rk-portfolio">
     <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
 
-      <a routerLink="/item" class="rk-item ae-masonry__item"><img src="assets/img/project-1.jpg" alt="">
+      <a routerLink="/item" class="animated fadeIn rk-item ae-masonry__item"><img src="assets/img/project-1.jpg" alt="">
         <div class="item-meta">
           <h2>Essential Stationery</h2>
           <p>Branding</p>
@@ -11,7 +11,7 @@
         
         
         
-        <a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-2.jpg" alt="">
+        <a href="portfolio-item.html" class="animated fadeIn rk-item ae-masonry__item"><img src="assets/img/project-2.jpg" alt="">
         <div class="item-meta">
           <h2>Pickled Tousled</h2>
           <p>Art Direction</p>
