--- a/src/app/pages/item/item.component.html
+++ b/src/app/pages/item/item.component.html
@@ -1,5 +1,10 @@
+
+
+
+
 <section *ngIf="producto">
-  <header class="rk-portfolio-cover  item-inside-1">
+  <header [ngStyle]="{ 'background-image':'url(assets/productos/'+ id +'/main.jpg)' }"
+           class="rk-portfolio-cover  item-inside-1">
     <div class="item-inside__meta">
       <h1 class="ae-u-bolder rk-portfolio-title ">{{ producto.producto }}</h1>
       <p class="ae-theta rk-portfolio-category ">{{ producto.categoria }}</p>
@@ -22,16 +27,17 @@
       <div class="ae-grid__item item-lg-5 au-lg-ptp-1">
         <h4 class="ae-u-bolder">{{ producto.subtitulo1 }}</h4>
         <p class="ae-eta">{{ producto.desc1 }}</p>
-        <p class="ae-eta">It includes a A6 flyer, A5 folder, A4 horizontal paper and a business card mockup. You can easily put your own graphics and create a new layout according to your needs.</p>
       </div>
       <div class="ae-grid__item item-lg-6 item-lg--offset-1">
-        <img src="assets/productos/inner-1.jpg" alt="Urku Portfolio"></div>
+        <img src="assets/productos/{{ id }}/pic-1.jpg" alt="Urku Portfolio">
+    </div>
     </div>
     <div class="ae-grid ae-grid--collapse">
-      <div class="ae-grid__item item-lg-8"><img src="assets/img/inner-2.jpg" alt="Urku Portfolio"></div>
+      <div class="ae-grid__item item-lg-8">
+        <img src="assets/productos/{{ id }}/pic-2.jpg" alt="Urku Portfolio">
+      </div>
       <div class="ae-grid__item item-lg-3 item-lg--offset-1 au-lg-ptp-1">
         <p>{{ producto.desc2 }}</p>
-        <p class="au-mb-3">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit <br>in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
         <p class="ae-u-bolder">{{ producto.subtitulo2 }}</p>
       </div>
       </div>
