--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -13,12 +13,12 @@
   </label>
   <div class="ae-container-fluid rk-topbar">
     <h1 class="rk-logo">
-      <a routerLink="home">{{ infoPaginaService.info.titulo }}</a>
+      <a routerLink="home">{{ _servicio.info.titulo }}</a>
     </h1>
     <nav class="rk-navigation">
       <ul class="rk-menu">
         <li routerLinkActive="active" class="rk-menu__item">
-          <a routerLink="home" href="" class="rk-menu__link">Home</a>
+          <a routerLink="home"  class="rk-menu__link">Home</a>
         </li>   
 
         <li routerLinkActive="active" class="rk-menu__item">
@@ -26,14 +26,20 @@
         </li>
       </ul>
       
-      <form class="rk-search">
-        <input type="text" placeholder="Search" id="urku-search" class="rk-search-field">
+      <div class="rk-search">
+        <input type="text" 
+                 (keyup.enter)="buscarProducto( txtBuscar.value )"
+                 placeholder="Buscar..." 
+                 id="urku-search" 
+                 class="rk-search-field"
+                 #txtBuscar>
+
         <label for="urku-search">
           <svg>
             <use xlink:href="assets/img/symbols.svg#icon-search"></use>
           </svg>
         </label>
-      </form>
+      </div>
     </nav>
   </div>
 </header>
