--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -24,8 +24,6 @@
     </svg>
   </div>
   
-
-
     <p>
       Espere por favor
     </p>
@@ -38,8 +36,8 @@
     <a *ngFor="let producto of productosService.productos"
           [routerLink]="['/item', producto.cod]" class="animated fadeIn rk-item ae-masonry__item">
         <img src="assets/productos/{{ producto.url }}.jpg" alt="">
-       <div [routerLink]= "['/item', producto.cod]" class="animated fadeIn rk-item ae-masonry__item">
-          <h2>{{ producto.titulo }}</h2>
+        <div class="item-meta"> 
+        <h2>{{ producto.titulo }}</h2>
           <p>{{ producto.categoria }}</p>
         </div>
       </a>
